environments/overlays/cicd/gitops-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-namespace-gitops
spec:
  podSelector:
    matchLabels:
      eventlistener: server-post-prod
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: product-catalog-gitops
    ports:
      - protocol: TCP
        port: 8080
  policyTypes:
    - Ingress
