environments/overlays/cicd/prod-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-namespace-prod
spec:
  podSelector:
    matchLabels:
      eventlistener: server
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: product-catalog-prod
    ports:
      - protocol: TCP
        port: 8080
  policyTypes:
    - Ingress
